fix jumbotron from going to the bottom right on firefox, opera and safari

--- a/client/styles/main.custom.css
+++ b/client/styles/main.custom.css
@@ -2,6 +2,9 @@ body > .container > .jumbotron {
   position: absolute;
   top: 50%;
   left:50%;
+  -webkit-transform: translate(-50%,-50%);
+  -moz-transform: translate(-50%,-50%);
+  -o-transform: translate(-50%,-50%);
   transform: translate(-50%,-50%);
 }
 .col-centered{
